tests/fixtures/invalid/err002_variable_before_declaration.rex
find "price tag" in $page as $price
observe page "https://example.com/pricing" as $page
